--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteCond $1 !^(index\.php|images|js|css|favicon\.ico)
+RewriteCond $1 !^(index\.php|images|js|css|GroupMePHP|CAS|favicon\.ico)
 RewriteRule ^(.*)$ /index.php/$1 [L]
